fix padding between email and buttons on tablet version

--- a/src/pages/EditWarehousePage/EditWarehousePage.scss
+++ b/src/pages/EditWarehousePage/EditWarehousePage.scss
@@ -137,7 +137,7 @@
       border-bottom: none;
       padding-left: 2rem;
       padding-right: 2rem;
-      padding-bottom: 0.5rem;
+      padding-bottom: 2rem;
 
       &:first-child {
         border-right: 1px solid globals.$cloud;
